[package]
name = "leet_code"
version = "0.1.0"
authors = ["will <william.t.hammond@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "test-fancy"
path = "fancy_sequence/src/test.rs"

[[bin]]
name = "run-fancy"
path = "fancy_sequence/src/main.rs"

[[bin]]
name = "test-minimum-window-substring"
path = "minimum_window_substring/src/test.rs"

[[bin]]
name = "run-minimum-window-substring"
path = "minimum_window_substring/src/main.rs"

[dependencies]
